# libtrace

./: .hgignore  CMakeLists.txt  Makefile
inc/: ArchInterface.h  InstructionPrinter.h  RecordFile.h  RecordIterator.h  RecordTypes.h  TraceManager.h  TraceSink.h  TraceSource.h  records.h
inc/libtrace/: ArchInterface.h  InstructionPrinter.h  RecordFile.h  RecordIterator.h  RecordReader.h  RecordTypes.h  TraceRecordStream.h  TraceSource.h
lib/: ArchInterface.cpp  InstructionPrinter.cpp  RecordFile.cpp  RecordIterator.cpp  RecordReader.cpp  TraceManager.cpp  TraceRecordStream.cpp  TraceSink.cpp  TraceSource.cpp
tools/: RecordASIDCat.cpp  RecordCat.cpp  RecordDiffMemory.cpp  RecordExtractMem.cpp  RecordExtractPC.cpp  RecordHead.cpp  RecordLess.cpp  RecordPCDiff.cpp  RecordPCGrep.cpp  RecordRegGrep.cpp  RecordStream.h  RecordTail.cpp  RecordUniqPC.cpp  RecordUserFilter.cpp
